solve z-index problem and modify font name

--- a/project/src/App.css
+++ b/project/src/App.css
@@ -11,7 +11,7 @@ body {
 
 @font-face {
   font-family: "Miwonfont";
-  src: url("./fonts/미원Miwon.otf");
+  src: url("./fonts/Miwon.otf");
 }
 
 .nav-link.active {
